update footer info

--- a/table.html
+++ b/table.html
@@ -118,6 +118,10 @@
                 &copy;<a href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors.</a> Base map and data from OpenStreetMap and OpenStreetMap Foundation
             </p>
         </div>
+        <hr>
+        <div class="footer">
+            <p>This site is on <a href="https://github.com/ssysm/ChiaNodeSync">GitHub</a></p>
+        </div>
     </div>
 
     <script>
